# cmakedbg

./: .gitignore  DEVLOG.md  README.md  cmakedebuggerclient.py  mypy.ini  pyproject.toml  testrun.sh
cmake-examples-master/08-mpi/src1/: CMakeLists.txt
cmake-examples-master/08-mpi/src1/src1_subdir1/: CMakeLists.txt
cmake-examples-master/08-mpi/src1/src1_subdir2/: CMakeLists.txt
cmakedbg/: __main__.py  cmakedbg.py  debugger.py
tests/: test_cmakedbg.py
tests/cmake-examples-master/08-mpi/: CMakeLists.txt
tests/cmake-examples-master/08-mpi/src2/: CMakeLists.txt
tests/cmake-examples-master/08-mpi/src2/src2_subdir/: CMakeLists.txt
