[tool.poetry]
name = "cmakedbg"
version = "0.1.0"
description = "A GDB like terminal interface for CMake's debugger, interfacing with CMake's Debug Adapter Protocol"
authors = ["Subil <subil@secondspass.org"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"



[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.12.0"
mypy = "^1.15.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

