[project]
name = "cmakedbg"
version = "0.1.0"
description = "a cmake debugger like gdb. Needs cmake >=3.27"
authors = [
    {name = "subil",email = "subil@secondspass.org"}
]
license = {text = "AGPL"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
cmakedbg = "cmakedbg.debugger:main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
pytest = "^8.3.5"
python-lsp-server = {extras = ["all"], version = "^1.12.2"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
