[project]
name = "cmakedbg"
version = "0.1.1"
description = "a cmake debugger like gdb. Needs cmake >=3.27"
authors = [
    {name = "subil",email = "subil@secondspass.org"}
]
license = {text = "AGPL"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
keywords = ["cmake","debugger","cli","debug"]
classifiers = [

"Development Status :: 3 - Alpha",
"Intended Audience :: Developers",
"Environment :: Console",
"License :: OSI Approved :: GNU Affero General Public License v3",
"Operating System :: POSIX",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
"Programming Language :: Python :: 3.14",
"Programming Language :: Python :: 3.15",
"Topic :: Software Development :: Debuggers"

]

[project.urls]
Homepage = "https://github.com/secondspass/cmakedbg"

[project.scripts]
cmakedbg = "cmakedbg.debugger:main"

[tool.mypy]
allow_redefinition = "True"
check_untyped_defs = "True"

[tool.poetry]


[project.scripts]
cmakedbg = "cmakedbg.debugger:main"


[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
pytest = "^8.3.5"
python-lsp-server = {extras = ["all"], version = "^1.12.2"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
